--- a/my-app/src/components/feature/Resume/resume.css
+++ b/my-app/src/components/feature/Resume/resume.css
@@ -3,9 +3,7 @@
     align-items: center;
     justify-content: center;
     position: absolute;
-    /* top: 60%;
-    left: 50%; */
-    transform: translate(100%, 6%);
+    width: 100%;
     height: 80vh;
 }
 
@@ -30,8 +28,9 @@
 
         @media only screen and (min-device-width: 280px) and (max-device-width: 480px) {
             .resume__container {
-                transform: translate(2%, 5%);
-    
+                transform: translate(50%, 0%);
+                width: 50vw;
+                margin-top: 3vh;
             }
 
             .resume__image {
@@ -39,13 +38,6 @@
                 transition: 0.5s;
             }
 
-            /* @media(hover: hover) {
-                .resume__image:hover {
-                    z-index: 1;
-                    transform: scale(1.05);
-                    box-shadow: 0 25px 40px rgba(0,0,0,.5);
-                }
-            } */
         }
 
         @media only screen and (min-device-width: 480px) and (max-width: 768px) {
@@ -61,8 +53,8 @@
 
         @media only screen and (min-device-width: 375px)and (max-width: 926px) {
             .resume__container {
-                transform: translate(0%, 5%);
-                width: 95vw;
+                transform: translate(50%, 0%);
+                width: 50vw;
             }
 
             .resume__image {
@@ -74,8 +66,9 @@
 
         @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
             .resume__container {
-                transform: translate(9%, 8%);
-                width: 80vw;
+                transform: translate(50%, 0%);
+                width: 50vw;
+                margin-top: 7vh;
             }
 
             .resume__image {
@@ -86,8 +79,9 @@
 
         @media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) {
             .resume__container {
-                transform: translate(45%, 8%);
+                transform: translate(50%, 0%);
                 width: 50vw;
+                margin-top: 7vh;
             }
 
             .resume__image {
@@ -98,8 +92,9 @@
 
         @media only screen and (min-device-width: 1366px) and (max-device-width: 2600px) {
             .resume__container {
-                transform: translate(45%, 8%);
+                transform: translate(50%, 0%);
                 width: 50vw;
+                margin-top: 8vh;
             }
 
             .resume__image {
@@ -112,7 +107,7 @@
 
     @media (orientation: landscape) and (max-width: 768px) {
         .resume__container {
-            transform: translate(30%, 5%);
+            transform: translate(40%, 0%);
             width: 55vw;
         }
 
@@ -122,26 +117,4 @@
         }
     }
 
-    @media (orientation: landscape) and (max-width: 1024px) {
-        .resume__container {
-            transform: translate(40%, 5%);
-            width: 55vw;
-        }
-
-        .resume__image {
-            height: 80vh;
-            transition: 0.5s;
-        }
-    }
-
-    @media (orientation: landscape) and (max-device-width: 1366px) {
-        .resume__container {
-            transform: translate(40%, 8%);
-            width: 55vw;
-        }
-
-        .resume__image {
-            height: 80vh;
-            transition: 0.5s;
-        }
-    }
+    
