--- a/my-app/src/assets/css/AboutMe.css
+++ b/my-app/src/assets/css/AboutMe.css
@@ -7,23 +7,22 @@
   }
 
 #mainPage-wrapper {
-    position: absolute;
+    /* position: absolute; */
     top: 60%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    /* transform: translate(-50%, -50%); */
     width: 100%;
-    height: 700px;
+    height: 100%;
     border-radius: 10px;
     max-width: 100%;
     padding: 4.5rem 2.5rem 1.5rem 2.5rem;
-    /* background-color: red; */
     border-radius: 4px;
     opacity: 1;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    Margin-top: 40rem;
+    /* Margin-top: 22rem; */
 }
 
 #bio-wrapper {
@@ -452,14 +451,14 @@
             display: flex;
             flex-direction: column;
             width: 90vw;
-            margin-top: 10vh;
+            /* margin-top: 10vh; */
             /* grid-gap: 60px; */
         }
 
         .overlay-practice {
             width: 90vw;
             margin-right: -10px;
-            margin-top: 60vh;
+            /* margin-top: 60vh; */
             transform: translate(0%, 0%);
             
         }
@@ -550,14 +549,14 @@
             display: flex;
             flex-direction: column;
             width: 90vw;
-            margin-top: 10vh;
+            /* margin-top: 10vh; */
             /* grid-gap: 60px; */
         }
 
         .overlay-practice {
             width: 90vw;
             margin-right: -10px;
-            margin-top: 70vh;
+            /* margin-top: 70vh; */
             transform: translate(0%, 0%);
             
         }
@@ -638,7 +637,7 @@
             display: flex;
             flex-direction: column;
             width: 90vw;
-            margin-top: 10vh;
+            /* margin-top: 10vh; */
             /* grid-gap: 60px; */
             
         }
@@ -646,7 +645,7 @@
         .overlay-practice {
             width: 90vw;
             margin-right: -10px;
-            margin-top: 40vh;
+            /* margin-top: 40vh; */
             transform: translate(0%, 0%);
             
         }
@@ -712,7 +711,7 @@
             /* display: flex; */
             /* flex-direction: column; */
             width: 90vw;
-            margin-top: 10vh;
+            /* margin-top: 10vh; */
             grid-gap: 60px;
         }
 
