--- a/my-app/src/assets/css/AboutMe.css
+++ b/my-app/src/assets/css/AboutMe.css
@@ -15,7 +15,7 @@
     height: 100%;
     border-radius: 10px;
     max-width: 100%;
-    padding: 4.5rem 2.5rem 1.5rem 2.5rem;
+    /* padding: 4.5rem 2.5rem 1.5rem 2.5rem; */
     border-radius: 4px;
     opacity: 1;
     display: flex;
@@ -416,6 +416,7 @@
         #mainPage-wrapper {
             width: 100%;
             /* height:100%; */
+            padding: 2.5rem 2.5rem 1.5rem 2.5rem;
         }
 
         .container {
@@ -512,6 +513,10 @@
     }
 
     @media only screen and (min-device-width: 375px)and (max-width: 768px) {
+        #mainPage-wrapper {
+            padding: 4.5rem 2.5rem 1.5rem 2.5rem;
+        }
+
         .container {
             width: 100%;
             /* transform: translate(-10%, 0%); */
@@ -524,14 +529,6 @@
            /*  height: 100%; */
             
         }
-
-      /*   .container .card .card-1{
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            height: 1000px;
-            
-        } */
 
         .container .card h2 {
             font-size: 13px;
@@ -608,16 +605,21 @@
     }
 
     @media only screen and (min-device-width: 768px) and (max-device-width: 1000px) {
+
+        #mainPage-wrapper {
+            padding: 4.5rem 2.5rem 1.5rem 2.5rem;
+        }
+
         .container {
             width: 100%;
             transform: translate(0%, 0%);
         }
 
         .container .card {
-            width: 70vw;
+            /* width: 70vw; */
             display: flex;
             flex-direction: column;
-            height: 200vh;
+            /* height: 200vh; */
             /* transform: translate(0%, 0%); */
         }
 
@@ -691,12 +693,16 @@
     }
 
     @media only screen and (min-device-width: 1000px) and (max-device-width: 1366px) {
+        #mainPage-wrapper {
+            padding: 4.5rem 2.5rem 1.5rem 2.5rem;
+        }
+
         .container {
             width: 100%;
         }
 
         .container .card {
-            width: 100vw;
+            /* width: 100vw; */
         }
 
         .container .card h2 {
@@ -758,10 +764,22 @@
     }
 
 
+
+    @media only screen and (min-device-width: 1366px) and (max-device-width: 2500px) {
+        #mainPage-wrapper {
+            padding: 4.5rem 2.5rem 1.5rem 2.5rem;
+        }
+        
+    }
+
 /* For Landscape view */
 
 @media (orientation: landscape) and (min-width: 480px) and (max-width: 768px) {
     
+}
+
+@media (orientation: landscape) and (min-width: 768px) and (max-width: 1000px) {
+
 }
 
 @media (orientation: landscape) and (min-width: 1000px) and (max-height: 900px) {
@@ -770,7 +788,7 @@
     }
 
     .container .card {
-        width: 100vw;
+        /* width: 100vw; */
     }
 
     .container .card h2 {
@@ -785,7 +803,7 @@
         /* display: flex; */
         /* flex-direction: column; */
         width: 90vw;
-        margin-top: 10vh;
+        margin-top: 1vh;
         grid-gap: 60px;
     }
 
