--- a/my-app/src/components/feature/personal_card.css
+++ b/my-app/src/components/feature/personal_card.css
@@ -29,7 +29,8 @@
   /*Perspective: 1000px -> allows us to vamp up the 3D effect based on px value*/
   .card {
     margin: 5px auto 0;
-    width: 1200px;
+    /* width: 1200px; */
+    width: 100%;
     height: /* 600px */ 35rem;
     perspective: 1000px;
     display: flex;
