--- a/my-app/src/components/layout/Contact/Contact.css
+++ b/my-app/src/components/layout/Contact/Contact.css
@@ -27,11 +27,19 @@
 @media only screen and (min-device-width: 280px) and (max-width: 480px) {
     #contact {
         
-        transform: translate(-50%, -20%);
+        /* transform: translate(-50%, -20%); */
         display: flex;
         flex-direction: column;
         width: 20vw;
         
+    }
+
+    .skills {
+        margin-top: .5rem;
+    }
+
+    .skills-title {
+        margin-top: 2rem;
     }
 
     .skills-container ul {
@@ -44,17 +52,26 @@
 
 
     #form-wrapper {
-        transform: translate(-4%, 00%);
-        width: 90vw;
+        /* transform: translate(-4%, 00%); */
+        width: 100%;
         height: 90vh;
-        margin-top: 80vh;
+        margin-top: 45rem;
+        top:0%;
+        left:0%;
+        transform: translate(0%, 0%);
+    }
+
+    .email {
+        /* width: 100%; */
+        display: flex;
+        flex-direction: column;
     }
 
     .email-form {
         /* transform: translate(-4%, 0%); */
         /* height: 290px; */
        /*  border: .10px solid red; */
-        width: 80vw;
+        /* width: 80vw; */
         
     }
     
